add: enhances the automation logic